alignment fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -103,6 +103,7 @@ body {
   max-width: 300px;
   position: sticky;
   top: 150px;
+  margin: auto;
 
   .name-card-inner {
     margin: auto;
